# rov-gui

./: .env  .gitignore  .travis.yml  Procfile  README.md  package-lock.json  package.json  webpack.build.config.js  webpack.dev.config.js
co-pilot/: copilot.kv  main.py
pilot/: pilot.py  rtsp-test.py
public/: index.html
rqt_vortex_bluetooth/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
rqt_vortex_bluetooth/resource/: MyPlugin.ui
rqt_vortex_bluetooth/src/rqt_vortex_bluetooth/: my_module.py
rqt_vortex_camera_selection/: CMakeLists.txt  README.md  package.xml  plugin.xml
rqt_vortex_camera_selection/resource/: MyPlugin.ui
rqt_vortex_camera_selection/src/rqt_vortex_camera_selection/: my_module.py
rqt_vortex_compass/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
rqt_vortex_compass/resource/: MyPlugin.ui
rqt_vortex_compass/src/rqt_vortex_compass/: my_module.py
rqt_vortex_control_mode/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
rqt_vortex_control_mode/resource/: MyPlugin.ui
rqt_vortex_control_mode/src/rqt_vortex_control_mode/: my_module.py
rqt_vortex_depth/: CMakeLists.txt  README.md  package.xml  plugin.xml
rqt_vortex_depth/resource/: MyPlugin.ui
rqt_vortex_depth/src/rqt_vortex_depth/: my_module.py
rqt_vortex_gui/: CMakeLists.txt  README.md  package.xml  plugin.xml
rqt_vortex_gui/perspectives/: Vortex_gui_perspective_v1.perspective
rqt_vortex_gui/resource/: MyPlugin.ui
rqt_vortex_gui/src/rqt_vortex_gui/: my_module.py
rqt_vortex_light/: CMakeLists.txt  README.md  package.xml  plugin.xml
rqt_vortex_light/resource/: MyPlugin.ui
rqt_vortex_light/src/rqt_vortex_light/: my_module.py
rqt_vortex_sensor_calibration/: CMakeLists.txt  README.md  package.xml  plugin.xml
rqt_vortex_sensor_calibration/resource/: MyPlugin.ui
rqt_vortex_sensor_calibration/src/rqt_vortex_sensor_calibration/: my_module.py
rqt_vortex_thruster_enable/: CMakeLists.txt  README.md  ThrusterEnable.srv  package.xml  plugin.xml  setup.py
rqt_vortex_thruster_enable/resource/: MyPlugin.ui
rqt_vortex_thruster_enable/src/rqt_vortex_thruster_enable/: my_module.py
src/: App.css  App.js  electron-starter.js  index.css  index.js
src/actions/: actionTypes.js  measurementsActions.js  rosActions.js
src/components/: App.js  Connecting.css  Connecting.js  Gui.js  RosError.css  RosError.js
src/components/aircraft-id-tab/: AircraftIdTab.js
src/components/aircraftIdTab/: AircraftIdTab.css  AircraftIdTab.js
src/components/common/big-red-button/: BigRedButton.css  BigRedButton.js
src/components/common/value-input/: ValueInput.css  ValueInput.js
src/components/general/: GeneralTab.js
src/components/general-tab/: GeneralTab.js
src/components/general-tab/arm-toggler/: ArmToggler.css  ArmToggler.js
src/components/general-tab/camera-tilt/: CameraTilt.js
src/components/general-tab/control-mode/: ControlMode.css  ControlMode.js
src/components/general-tab/healthcheck/: HealthIndicator.css
src/components/general-tab/measurements/: Depth.css  Depth.js  Measurements.js
src/components/general-tab/thruster-scaling/: ThrusterScaling.css  ThrusterScaling.js
src/components/general/healthcheck/: HealthCheck.js  HealthIndicator.js
src/components/generalTab/: GeneralTab.css  GeneralTab.js
src/components/generalTab/graph/: RosGraph.js
src/components/generalTab/healthcheck/: HealthCheck.js  HealthIndicator.js
src/components/liftbag-tab/: LiftbagTab.css  LiftbagTab.js
src/components/liftbagTab/: LiftbagTab.js
src/components/obs-tab/: DataGrid.js  ObsTab.js
src/components/obsTab/: Barchart.css  Barchart.js  BubbleLevel.css  BubbleLevel.js  DataGrid.css  DataTable.css  DataTable.js  ObsTab.css  ObsTab.js  Seismograph.js
src/components/power-calculator/: PowerCalculator.js  PowerCalculatorOutput.css  PowerCalculatorOutput.js  PowerCalculatorTab.css  PowerCalculatorTab.js
src/components/rov-monitor/: Device.css  Device.js  RovMonitorTab.css  RovMonitorTab.js
src/components/search-zone-tab/: SearchZoneOutput.css  SearchZoneOutput.js  SearchZoneTab.css  SearchZoneTab.js  ValueInput.css  ValueInput.js
src/reducers/: initialState.js  rootReducer.js  rosReducer.js
src/store/: configureStore.js
src/utils/: rosSpammer.js  rovMock.js  rov_mock.py
