<?xml version="1.0"?>
<package>
  <name>rqt_vortex_thruster_enable</name>
  <version>0.0.0</version>
  <description>rqt plugin for vortex thruster enable</description>

  <maintainer email="ingrfjon@online.no">Ingrid Fjordheim Onstein</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
